--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 	            <div class="modal-header">
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
-					<h4>List of Transactions with the same Package</h4>
+					<h4>List of Transactions with the same Command</h4>
 	            </div>
 	            <div class="modal-body">
 	                <form class="form-horizontal bv-form">
