Split out functions  and API calls in admin server

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Glyph icons -->
-	@font-face{
+	@font-face {
 		font-family: "glyphicons-halflings-regular";
 		src: url('json-ui/fonts/glyphicons-halflings-regular.ttf') format('truetype');
 	}
-	@font-face{
+	@font-face {
 		font-family: "glyphicons-halflings-regular";
-		src: url('json-ui/fonts/glyphicons-halflings-regular.woff'), url('json-ui/fonts/glyphicons-halflings-regular.woff2') format('woff');
+		src: url('json-ui/fonts/glyphicons-halflings-regular.woff') format('woff');
 	}
 
 	<!-- 3rd party stylesheets and libraries -->
