Moved the configuration file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 	<!-- Application definitions -->
 	<script src="example/client/common.js"></script>
+	<script src="example/client/config.js"></script>
 	<script src="example/client/forms.js"></script>
 	<script src="example/client/functions.js"></script>
 	<script src="example/client/login.js"></script>
@@ -38,7 +39,6 @@
 	<script src="json-ui/js/messages.js"></script>
 	
 	<!-- UI functions that hold definitions that can be edited -->
-	<script src="json-ui/etc/config.js"></script>
 	<script src="json-ui/etc/validation.js"></script>
 </head>
 
