--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
 	<script src="json-ui/packages/bootstrap-multiselect.js"></script>
 	<script src="json-ui/packages/bootstrap-datetimepicker.js"></script>
 
-	<!-- Application definitions -->
+	<!-- Sample application logic -->
 	<script src="example/client/common.js"></script>
 	<script src="example/client/config.js"></script>
-	<script src="example/client/forms.js"></script>
-	<script src="example/client/functions.js"></script>
 	<script src="example/client/login.js"></script>
-	<script src="example/client/menu.js"></script>
 	<script src="example/client/messages.js"></script>
+	
+	<!-- Sample application form and menu structure -->
+	<script src="example/client/forms.js"></script>
+	<script src="example/client/menu.js"></script>
+
+	<!-- Sample application form functions -->
+	<script src="example/client/functions/command.js"></script>
+	<script src="example/client/functions/general.js"></script>
 
 	<!-- UI scripts that hold core functions. Shouldn't be edited -->
 	<script src="json-ui/js/ui.js"></script>
