Broke out sample app functions by data type

--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
 	<script src="json-ui/packages/bootstrap-multiselect.js"></script>
 	<script src="json-ui/packages/bootstrap-datetimepicker.js"></script>
 
+	<!-- Sample application form and menu structure -->
+	<script src="example/client/forms.js"></script>
+	<script src="example/client/menu.js"></script>
+
 	<!-- Sample application logic -->
 	<script src="example/client/common.js"></script>
 	<script src="example/client/config.js"></script>
 	<script src="example/client/login.js"></script>
 	<script src="example/client/messages.js"></script>
 	
-	<!-- Sample application form and menu structure -->
-	<script src="example/client/forms.js"></script>
-	<script src="example/client/menu.js"></script>
-
 	<!-- Sample application form functions -->
+	<script src="example/client/functions/bundle.js"></script>
 	<script src="example/client/functions/command.js"></script>
+	<script src="example/client/functions/company.js"></script>
+	<script src="example/client/functions/connector.js"></script>
 	<script src="example/client/functions/general.js"></script>
+	<script src="example/client/functions/user.js"></script>
 
 	<!-- UI scripts that hold core functions. Shouldn't be edited -->
 	<script src="json-ui/js/ui.js"></script>
