Restructured files in example for clarity

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 	<script src="json-ui/packages/bootstrap-datetimepicker.js"></script>
 
 	<!-- Sample application form and menu structure -->
-	<script src="example/client/forms.js"></script>
-	<script src="example/client/menu.js"></script>
+	<script src="example/client/ui/forms.js"></script>
+	<script src="example/client/ui/menu.js"></script>
 
 	<!-- Sample application logic -->
-	<script src="example/client/common.js"></script>
-	<script src="example/client/config.js"></script>
-	<script src="example/client/login.js"></script>
-	<script src="example/client/messages.js"></script>
+	<script src="example/client/support/common.js"></script>
+	<script src="example/client/support/config.js"></script>
+	<script src="example/client/support/login.js"></script>
+	<script src="example/client/support/messages.js"></script>
 	
 	<!-- Sample application form functions -->
 	<script src="example/client/functions/bundle.js"></script>
