--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<script src="example/client/functions/company.js"></script>
 	<script src="example/client/functions/connector.js"></script>
 	<script src="example/client/functions/general.js"></script>
+	<script src="example/client/functions/report.js"></script>
 	<script src="example/client/functions/user.js"></script>
 
 	<!-- UI scripts that hold core functions. Shouldn't be edited -->
@@ -64,7 +65,7 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Event Summary
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="event_summary('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.eventSummary('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -88,7 +89,7 @@
 					<br/>
 					<h4>Recent Errors
 						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentErrorsFilter"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span></button>
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="recent_errors('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentErrors('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -99,7 +100,7 @@
 								<div class="col-md-2">
 									<input type="text" class="form-control" id="reportRecentErrorsLimit" placeholder="Integer">
 								</div>
-								<button type="submit" class="btn btn-info btn-sm" onclick="set_filter_values('reportRecentErrors'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentErrors'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
 							</div>
 						</div>
 						<div class="row">
@@ -124,7 +125,7 @@
 					<br/>
 					<h4>Recent Transactions
 						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentTransFilter"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span></button>
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="recent_trans('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentTransactions('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -171,7 +172,7 @@
 										<input type="text" class="form-control" id="reportRecentTransLimit" placeholder="Integer">
 									</div>
 								</div>
-								<button type="submit" class="btn btn-info btn-sm" onclick="set_filter_values('reportRecentTrans'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentTrans'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
 							</div>
 						</div>
 						<div class="row">
@@ -195,7 +196,7 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Usage Statistics
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="usage_stats('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.usageStats('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
