Added missing style element

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Glyph icons -->
-	@font-face {
-		font-family: "glyphicons-halflings-regular";
-		src: url('json-ui/fonts/glyphicons-halflings-regular.ttf') format('truetype');
-	}
-	@font-face {
-		font-family: "glyphicons-halflings-regular";
-		src: url('json-ui/fonts/glyphicons-halflings-regular.woff') format('woff');
-	}
+	<style>
+		@font-face {
+			font-family: "glyphicons-halflings-regular";
+			src: url('json-ui/fonts/glyphicons-halflings-regular.ttf');
+		}
+		@font-face {
+			font-family: "glyphicons-halflings-regular";
+			src: url('json-ui/fonts/glyphicons-halflings-regular.woff');
+		}
+	</style>
 
 	<!-- 3rd party stylesheets and libraries -->
 	<link rel="stylesheet" href="json-ui/packages/bootstrap.min.css">
