Removed aria-hidden

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Event Summary
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.eventSummary('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.eventSummary('default'); return false;"><span class="glyphicon glyphicon-refresh"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -90,8 +90,8 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Recent Errors
-						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentErrorsFilter"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span></button>
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentErrors('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentErrorsFilter"><span class="glyphicon glyphicon-filter"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentErrors('default'); return false;"><span class="glyphicon glyphicon-refresh"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -102,7 +102,7 @@
 								<div class="col-md-2">
 									<input type="text" class="form-control" id="reportRecentErrorsLimit" placeholder="Integer">
 								</div>
-								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentErrors'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentErrors'); return false;"><span class="glyphicon glyphicon-ok"></span></button>
 							</div>
 						</div>
 						<div class="row">
@@ -126,8 +126,8 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Recent Transactions
-						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentTransFilter"><span class="glyphicon glyphicon-filter" aria-hidden="true"></span></button>
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentTransactions('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" data-toggle="collapse" data-target="#reportRecentTransFilter"><span class="glyphicon glyphicon-filter"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.recentTransactions('default'); return false;"><span class="glyphicon glyphicon-refresh"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
@@ -174,7 +174,7 @@
 										<input type="text" class="form-control" id="reportRecentTransLimit" placeholder="Integer">
 									</div>
 								</div>
-								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentTrans'); return false;"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></button>
+								<button type="submit" class="btn btn-info btn-sm" onclick="report.setFilterValues('reportRecentTrans'); return false;"><span class="glyphicon glyphicon-ok"></span></button>
 							</div>
 						</div>
 						<div class="row">
@@ -198,7 +198,7 @@
 	                <button type="button" class="close" data-dismiss="modal">&times;</button>
 					<br/>
 					<h4>Usage Statistics
-						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.usageStats('default'); return false;"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+						<button type="button" class="btn btn-info btn-sm pull-right" onclick="report.usageStats('default'); return false;"><span class="glyphicon glyphicon-refresh"></span></button>
 					</h4>
 	            </div>
 	            <div class="modal-body">
