Renamed _validation to _format

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<script src="json-ui/js/messages.js"></script>
 	
 	<!-- UI functions that hold definitions that can be edited -->
-	<script src="json-ui/etc/validation.js"></script>
+	<script src="json-ui/etc/format.js"></script>
 </head>
 
 <body onload="login.init();">
