--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<!-- Sample application form and menu structure -->
 	<script src="example/client/ui/forms.js"></script>
+	<script src="example/client/ui/map.js"></script>
 	<script src="example/client/ui/menu.js"></script>
 
 	<!-- Sample application logic -->
