Pass in all application definitions

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<script src="json-ui/packages/bootstrap-datetimepicker.js"></script>
 
 	<!-- Sample application form and menu structure -->
+	<script src="example/client/ui/fields.js"></script>
 	<script src="example/client/ui/forms.js"></script>
-	<script src="example/client/ui/map.js"></script>
 	<script src="example/client/ui/menu.js"></script>
 
 	<!-- Sample application logic -->
