Renamed map to field

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- Sample application form and menu structure -->
 	<script src="example/client/ui/fields.js"></script>
 	<script src="example/client/ui/forms.js"></script>
-	<script src="example/client/ui/menu.js"></script>
+	<script src="example/client/ui/menus.js"></script>
 
 	<!-- Sample application logic -->
 	<script src="example/client/support/common.js"></script>
